Update website and ACNA presentation

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Apache Karaf - Enterprise runtime everywhere
+title: Apache Karaf - The Modulith Runtime
 permalink: /
 ---
 
@@ -9,8 +9,8 @@ permalink: /
   <div class="container-fluid product pt-5 pb-5 mx-auto">
     <div class="row pt-5 pb-5">
       <div class="col pt-5 pb-5 mx-auto text-center">
-        <h1 class="display-4 text-uppercase">Enterprise runtime everywhere</h1>
-        <p class="lead">Karaf provides polymorphic applications runtime for the enterprise, running on premise or on cloud.<br>
+        <h1 class="display-4 text-uppercase">The Modulith Runtime</h1>
+        <p class="lead">Karaf provides modulith runtime for the enterprise, running on premise or on cloud.<br>
         Focus on your business code and applications, Apache Karaf deals with the rest</p>
       </div>
     </div>
@@ -82,8 +82,8 @@ permalink: /
     <div class="row">
       <div class="col-lg-4">
         <h1><i class="fas fa-cogs"></i></h1>
-        <h3>Modern Runtime</h3>
-        <p>Karaf can run as a standalone runtime, supporting a wide range of applications and technologies.</p>
+        <h3>Modulith Runtime</h3>
+        <p>Karaf is modulith runtime, supporting a wide range of frameworks and technologies.</p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <h1><i class="fas fa-cubes"></i></h1>
@@ -93,7 +93,7 @@ permalink: /
       <div class="col-lg-4">
         <h1><i class="fas fa-cloud"></i></h1>
         <h3>On cloud or on premise</h3>
-        <p>Run anywhere (on any machine with Java, cloud, docker images) using Karaf powered distributions.</p>
+        <p>Run anywhere (on any machine with Java, cloud, docker images) using Karaf powered applications.</p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
@@ -105,8 +105,8 @@ permalink: /
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">Power your applications with <span class="text-muted">Karaf Runtime</span></h2>
-        <p class="lead">Karaf is a lightweight, powerful, and enterprise ready applications runtime. It provides all the ecosystem and bootstrapping options you need for your applications. It runs on premise or on cloud.
-        By polymorphic, it means that Karaf can host any kind of applications: WAR, OSGi, Spring, and much more.</p>
+        <p class="lead">Karaf is a lightweight, powerful, and enterprise ready modulith runtime. It provides all the ecosystem and bootstrapping options you need for your applications. It runs on premise or on cloud.
+        This modulith runtime supports several frameworks and different kind of applications: REST/API, Web, Spring Boot, and much more.</p>
         <p>Last version <strong>4.2.9</strong> - (9/6/20)</p>
         <p><a class="btn btn-primary" href="/projects.html" role="button">Learn more &raquo;</a></p>
       </div>
@@ -115,7 +115,7 @@ permalink: /
           Enterprise Features
         </div>
         <div class="bg-dark p-2 mb-2 mt-2 text-white text-center">
-          WebContainer (Pax Web)
+          HTTP Service
         </div>
         <div class="row p-2 mb-2 mt-2">
             <div class="col bg-secondary text-white p-2 ml-2 mr-2 text-center">
@@ -125,7 +125,7 @@ permalink: /
                 JMX
             </div>
             <div class="col bg-secondary text-white p-2 ml-2 mr-2 text-center">
-                ConfigAdmin
+                Configuration
             </div>
             <div class="col bg-secondary text-white p-2 ml-2 mr-2 text-center">
                 Security
@@ -146,10 +146,7 @@ permalink: /
             </div>
         </div>
         <div class="border p-2 mb-2 mt-2 text-center">
-          Programming Model (Spring / BluePrint / DeclarativeService)
-        </div>
-        <div class="border p-2 mb-2 mt-2 text-center">
-          OSGi Framework (Apache Felix / Eclipse Equinox)
+          Frameworks (JAXRS / Spring Boot / ...)
         </div>
         <div class="bg-primary p-2 mb-2 mt-2 text-white text-center">
           JVM
@@ -239,10 +236,10 @@ permalink: /
         <h2 class="featurette-heading"><span class="text-muted">Apache Karaf</span> in the Enterprise.</h2>
         <p class="lead">DevOps, Cloud, On Premise, Monitoring, Clustering... Apache Karaf is the perfect project for the companies that need performance and flexibility.</p>
         <p class="lead">Download the latest ApacheCon slideshow to have an overview of the amazing possibilities that Apache Karaf offer to your business!</p>
-        <p><a class="btn btn-primary" href="/resources/acna18-apache-karaf-in-the-enterprise.pdf" role="button">Download &raquo;</a></p>
+        <p><a class="btn btn-primary" href="/resources/acna20-apache-karaf-modulith-runtime.pdf" role="button">Download &raquo;</a></p>
       </div>
       <div class="col-md-7 order-md-1">
-        <img src="/images/apache-karaf-ac-2018.png" width="600px"/>
+        <img src="/images/acna20-apache-karaf-modulith-runtime.png" width="600px"/>
       </div>
     </div>
 
