Update website and announce 4.3.0 release

--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@ permalink: /
       <div class="carousel-item active">
         <div class="container">
           <div class="carousel-caption">
-            <p><strong>ApacheCon 2020 @Home! (29/9/20)</strong> - Karaf is coming to your living room this September!. (<a href="/news.html">Details</a>)</p>
+            <p><strong>Karaf runtime 4.3.0 has been released! (30/10/20)</strong> - This is a new major release for Karaf, 4.3.x is now the stable branch. It contains bunch of updates, new features and fixes. (<a href="/news.html">Details</a>)</p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
+            <p><strong>ApacheCon 2020 @Home! (29/9/20)</strong> - All sessions are now available on our YouTube channel! (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
       </div>
@@ -61,13 +68,6 @@ permalink: /
           </div>
         </div>
       </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <p><strong>Karaf Decanter 2.4.0 has been released! (30/4/20)</strong> - This is a new major update release for Apache Decanter 2.x, containing bug fixes, new features, and improvements. (<a href="news.html">Details</a>)</p>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 
@@ -83,7 +83,7 @@ permalink: /
       <div class="col-lg-4">
         <h1><i class="fas fa-cogs"></i></h1>
         <h3>Modulith Runtime</h3>
-        <p>Karaf is modulith runtime, supporting a wide range of frameworks and technologies.</p>
+        <p>Karaf is the modulith runtime, supporting a wide range of frameworks and technologies.</p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <h1><i class="fas fa-cubes"></i></h1>
@@ -93,7 +93,7 @@ permalink: /
       <div class="col-lg-4">
         <h1><i class="fas fa-cloud"></i></h1>
         <h3>On cloud or on premise</h3>
-        <p>Run anywhere (on any machine with Java, cloud, docker images) using Karaf powered applications.</p>
+        <p>Run anywhere (on any machine with Java, cloud, docker images) running your applications with Karaf. </p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
@@ -107,7 +107,7 @@ permalink: /
         <h2 class="featurette-heading">Power your applications with <span class="text-muted">Karaf Runtime</span></h2>
         <p class="lead">Karaf is a lightweight, powerful, and enterprise ready modulith runtime. It provides all the ecosystem and bootstrapping options you need for your applications. It runs on premise or on cloud.
         This modulith runtime supports several frameworks and different kind of applications: REST/API, Web, Spring Boot, and much more.</p>
-        <p>Last version <strong>4.2.9</strong> - (9/6/20)</p>
+        <p>Last version <strong>4.3.0</strong> - (30/10/20)</p>
         <p><a class="btn btn-primary" href="/projects.html" role="button">Learn more &raquo;</a></p>
       </div>
       <div class="col-md-5">
@@ -233,7 +233,7 @@ permalink: /
 
     <div class="row featurette">
       <div class="col-md-5">
-        <h2 class="featurette-heading"><span class="text-muted">Apache Karaf</span> in the Enterprise.</h2>
+        <h2 class="featurette-heading"><span class="text-muted">Apache Karaf</span> enterprise modulith runtime.</h2>
         <p class="lead">DevOps, Cloud, On Premise, Monitoring, Clustering... Apache Karaf is the perfect project for the companies that need performance and flexibility.</p>
         <p class="lead">Download the latest ApacheCon slideshow to have an overview of the amazing possibilities that Apache Karaf offer to your business!</p>
         <p><a class="btn btn-primary" href="/resources/acna20-apache-karaf-modulith-runtime.pdf" role="button">Download &raquo;</a></p>
@@ -262,7 +262,7 @@ permalink: /
       </div>
       <div class="col-md-5 align-items-center">
         <img class="featurette-image img-fluid mx-auto" src="/images/apache.png" alt="Apache"><br><br><br>
-        <a href="https://www.apache.org/events/current-event.html" target="_blank">
+        <a href="https://www.apachecon.com/acah2020/" target="_blank">
           <img class="featurette-image img-fluid mx-auto" src="https://www.apache.org/events/current-event-234x60.png" alt="ApacheCon" />
         </a>
       </div>
