--- a/news.html
+++ b/news.html
@@ -16,10 +16,10 @@ permalink: /news
                 <a class="text-dark">ApacheCon 2020 @Home</a>
               </h3>
               <div class="mb-1 text-muted">September 29, 2020</div>
-              <p class="card-text mb-auto">Join the Apache Karaf track during ApacheCon @Home!</p>
+              <p class="card-text mb-auto">All sessions are now available on our YouTube channel!</p>
               <a href="https://apachecon.com/acah2020/tracks/karaf.html" target="_blank">Karaf Track</a><br>
-              <a href="https://hopin.to/events/apachecon-home" target="_blank">Register</a><br>
-              <a href="https://www.apachecon.com/acna2020/index.html" target="_blank">Learn more</a>
+              <a href="https://www.youtube.com/playlist?list=PLU2OcwpQkYCy_awEe5xwlxGTk5UieA37m" target="_blank">YouTube</a><br>
+              <a href="https://www.apachecon.com/acah2020/" target="_blank">Learn more</a>
             </div>
           </div>
         </div>
@@ -50,6 +50,20 @@ permalink: /news
         <div class="row mb-5 mt-5">
             <div class="col-md-10">
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
+
+              <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf runtime 4.3.0 has been released! <span class="text-muted">October 30, 2020</span></h3>
+                <p>Apache Karaf runtime 4.3.0 has been released. It's a new milestone for the project. This first release on the 4.3.x series brings lot of new features, improvements and fixes especially:</p>
+                <ul>
+                  <li>OSGi R7</li>
+                  <li>JDK 11+</li>
+                  <li>JSON configuration format support</li>
+                  <li>better feature definition using requirements and capabilities</li>
+                  <li>BoM to simplify dependencies management</li>
+                </ul>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12343304" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
 
               <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf Cellar 4.2.1 has been released! <span class="text-muted">August 21, 2020</span></h3>
