Change link name

--- a/download.html
+++ b/download.html
@@ -509,7 +509,7 @@ permalink: /download
             <div class="col">
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-boxes"></i> Archives</h2>
               <p class="alert alert-primary" role="alert">
-                NB: Old releases are available for download <a href="/archives.html">here</a>.
+                All archives (from any version) can be found <a href="/archives.html">here</a>.
               </p>
             </div>
         </div>
