Add mishmash io story

--- a/stories.html
+++ b/stories.html
@@ -144,6 +144,25 @@ permalink: /stories
           </div>
         </div>
 
+        <div class="row mb-5 mt-5">
+          <div class="col">
+            <h4 class="pb-3 mb-4">mishmash io</h4>
+            <p>As a large-scale database and a high-performance computing platform mishmash io is a very complex system. It has many
+            interacting components and has to integrate well with custom Enterprise environments, cloud solutions and cloud
+            providers.</p>
+            
+            <p>There are many modular run-times we could've used to make our job easier, but we found only Apache Karaf covers that
+            many aspects of modularity - not only design but also the availability of ready-made modules, deployments, upgrades,
+            configuration, automation, management and operations. It saves us a lot of time and allows us to focus.</p>
+            
+            <p>Apache Karaf is also proving invaluable as our development and testing platform. Its flexibility allows us to work on
+            mishmash io core components in isolation or as part of a subsystem; on a single node or as a part of a cluster; in
+            simulation or performance testing; etc. As we're always looking for ways to make our code simpler, faster and better -
+            Apache Karaf is what made experimentation effortless for us.</p>
+            <a href="https://mishmash.io" target="_blank">https://mishmash.io</a>
+          </div>
+        </div>
+
       </div><!-- Run on Karaf -->
 
       <div class="container">
