--- a/download.html
+++ b/download.html
@@ -127,7 +127,7 @@ permalink: /download
                       <td class="text-success">Stable</td>
                       <td>4.3.0</td>
                       <td>4.3.1</td>
-                      <td>Dec '20</td>
+                      <td>Feb 21</td>
                     </tr>
                     <tr>
                       <td>4.2.x</td>
@@ -136,7 +136,7 @@ permalink: /download
                       <td class="text-success">Stable</td>
                       <td>4.2.10</td>
                       <td>4.2.11</td>
-                      <td>Dec '20</td>
+                      <td>Feb 21</td>
                     </tr>
                     <tr>
                         <td>4.1.x</td>
@@ -261,12 +261,20 @@ permalink: /download
                   </thead>
                   <tbody>
                     <tr>
+                      <td>4.3.x</td>
+                      <td>4.3.x</td>
+                      <td class="text-success">Dev</td>
+                      <td></td>
+                      <td>4.3.0</td>
+                      <td>Apr 21</td>
+                    </tr>
+                    <tr>
                       <td>4.2.x</td>
                       <td>4.2.x</td>
                       <td class="text-success">Stable</td>
                       <td></td>
                       <td>4.2.1</td>
-                      <td>Oct '20</td>
+                      <td></td>
                     </tr>
                     <tr>
                       <td>4.1.x</td>
@@ -381,7 +389,7 @@ permalink: /download
                       <td class="text-success">Stable</td>
                       <td>4.2.1</td>
                       <td>4.2.2</td>
-                      <td>Feb '20</td>
+                      <td>Mar 21</td>
                     </tr>
                     <tr>
                       <td>4.1.x</td>
@@ -465,9 +473,9 @@ permalink: /download
                         <td>2.0.x</td>
                         <td>4.x</td>
                         <td class="text-success">Stable</td>
-                        <td>2.4.0</td>
-                        <td>2.5.0</td>
-                        <td>Jun '20</td>
+                        <td>2.6.0</td>
+                        <td>2.7.0</td>
+                        <td>Feb 21</td>
                     </tr>
                   </tbody>
                 </table>
