Publish Karaf Decanter 2.7.0 release

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@ permalink: /
       <div class="carousel-item active">
         <div class="container">
           <div class="carousel-caption">
+            <p><strong>Karaf Decanter 2.7.0 has been released! (15/02/21)</strong> - This is a new major release for Karaf Decanter 2.x series. It contains bunch of updates, new features and fixes. (<a href="/news.html">Details</a>)</p>
+          </div>
+        </div>
+        <div class="container">
+          <div class="carousel-caption">
             <p><strong>Karaf runtime 4.3.0 has been released! (30/10/20)</strong> - This is a new major release for Karaf, 4.3.x is now the stable branch. It contains bunch of updates, new features and fixes. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
@@ -58,13 +63,6 @@ permalink: /
         <div class="container">
           <div class="carousel-caption">
             <p><strong>Karaf Decanter 2.5.0 has been released! (22/5/20)</strong> - This is a new major update release for Apache Decanter 2.x, containing bug fixes, new features, and improvements. (<a href="news.html">Details</a>)</p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <p><strong>Karaf Runtime 4.2.9 has been released! (9/6/20)</strong> - This is an update patch for Apache Karaf 4.2.x, containing bug fixes and improvements. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
       </div>
@@ -210,7 +208,7 @@ permalink: /
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Monitoring, alerting, and BAM with <span class="text-muted">Karaf Decanter.</span></h2>
         <p class="lead">You need a monitoring solution for Karaf and related ? You need a BAM (Business Activity Monitoring) platform for your application ? Karaf Decanter can be very convenient for you ! Decanter provides ready to use monitoring solution. It's also completely extensible and customizable.</p>
-        <p>Last version <strong>2.4.0</strong> - (30/4/20)</p>
+        <p>Last version <strong>2.7.0</strong> - (15/2/21)</p>
         <p><a class="btn btn-primary" href="/projects.html" role="button">Learn more &raquo;</a></p>
       </div>
       <div class="col-md-5 order-md-1">
@@ -221,7 +219,7 @@ permalink: /
           Dispatcher
         </div>
         <div class="bg-secondary p-4 mb-2 mt-2 text-white text-center">
-          SLA
+          Alerting
         </div>
         <div class="bg-dark p-4 mb-2 mt-2 text-white text-center">
           Appenders
