--- a/news.html
+++ b/news.html
@@ -52,6 +52,22 @@ permalink: /news
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
 
               <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf Decanter 2.7.0 has been released! <span class="text-muted">February 15, 2021</span></h3>
+                <p>Apache Karaf Decanter 2.7.0 is a major release on the 2.x series. It provides dependency updates, fixes, improvements, and new features, especially:
+                <ul>
+                  <li>refactoring of the Camel Collector as interceptor strategy</li>
+                  <li>improvements on the REST collector</li>
+                  <li>new OpenStack collector</li>
+                  <li>new Apache Druid collector</li>
+                  <li>new Grafana Loki appender</li>
+                  <li>new HDFS appender</li>
+                  <li>new AWS S3 appender</li>
+                </ul>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12349505" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf runtime 4.3.0 has been released! <span class="text-muted">October 30, 2020</span></h3>
                 <p>Apache Karaf runtime 4.3.0 has been released. It's a new milestone for the project. This first release on the 4.3.x series brings lot of new features, improvements and fixes especially:</p>
                 <ul>
