Fix index carousel

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@ permalink: /
             <p><strong>Karaf Decanter 2.7.0 has been released! (15/02/21)</strong> - This is a new major release for Karaf Decanter 2.x series. It contains bunch of updates, new features and fixes. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
+      </div>
+      <div class="carousel-item">
         <div class="container">
           <div class="carousel-caption">
             <p><strong>Karaf runtime 4.3.0 has been released! (30/10/20)</strong> - This is a new major release for Karaf, 4.3.x is now the stable branch. It contains bunch of updates, new features and fixes. (<a href="/news.html">Details</a>)</p>
