Announce Karaf 4.2.11 release

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@ permalink: /
       <div class="carousel-item active">
         <div class="container">
           <div class="carousel-caption">
+            <p><strong>Karaf 4.2.11 has been released! (15/03/21)</strong> - This is a new release for Karaf 4.2.x series. It contains updates, new features and fixes. (<a href="/news.html">Details</a>)</p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
             <p><strong>Karaf Decanter 2.7.0 has been released! (15/02/21)</strong> - This is a new major release for Karaf Decanter 2.x series. It contains bunch of updates, new features and fixes. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
