--- a/news.html
+++ b/news.html
@@ -53,6 +53,20 @@ permalink: /news
 
               <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf Decanter 2.7.0 has been released! <span class="text-muted">February 15, 2021</span></h3>
+                <p>Apache Karaf runtime 4.2.11 is a release on the 4.2.x series. It provides updates, fixes, improvements, especially:
+                <ul>
+                  <li>Karaf BillOfMaterial</li>
+                  <li>JMXMP improvements for Karaf MBean server</li>
+                  <li>SSH client fixes</li>
+                  <li>log:* commands fixes</li>
+                  <li>bunch of dependency updates</li>
+                </ul>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12348692" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf Decanter 2.7.0 has been released! <span class="text-muted">February 15, 2021</span></h3>
                 <p>Apache Karaf Decanter 2.7.0 is a major release on the 2.x series. It provides dependency updates, fixes, improvements, and new features, especially:
                 <ul>
                   <li>refactoring of the Camel Collector as interceptor strategy</li>
