--- a/download.html
+++ b/download.html
@@ -34,18 +34,19 @@ permalink: /download
           <div class="card flex-md-row mb-4 box-shadow h-md-250">
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-circle"></i> Latest release</strong>
-              <h3 class="mb-0 text-dark">Karaf Cellar <span class="text-muted">4.2.1</span></h3>
-              <div class="mb-1 text-muted">August 21, 2020</div>
-              <p class="card-text mb-auto">
-                Installation Instructions:
-                  <a href="#cellar-installation">installation</a>
-              </p>
-              <p class="card-text mb-auto">
-                Source Distribution :
-                  <a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.tar.gz.sha512">SHA512</a>] -
-                                <a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.zip.sha512">SHA512</a>]
-              </p>
-              <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12344252" role="button" target="_blank">Release note &raquo;</a>
+              <h3 class="mb-0 text-dark">Karaf Runtime <span class="text-muted">4.2.11</span></h3>
+              <div class="mb-1 text-muted">March 13, 2021</div>
+                <p class="card-text mb-auto">
+                    Binary Distribution :
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.11/apache-karaf-4.2.11.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11.tar.gz.sha512">SHA512</a>] -
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.11/apache-karaf-4.2.11.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/4.3.0/apache-karaf-4.3.0.zip.sha512">SHA512</a>]
+                </p>
+                <p class="card-text mb-auto">
+                    Source Distribution :
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.11/apache-karaf-4.2.11-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11-src.tar.gz.sha512">SHA512</a>] -
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.11/apache-karaf-4.2.11-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11-src.zip.sha512">SHA512</a>]
+                </p>
+                <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12348692" role="button" target="_blank">Release note &raquo;</a>
             </div>
           </div>
         </div>
@@ -86,6 +87,25 @@ permalink: /download
                                 <a href="http://www.apache.org/dyn/closer.lua/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.zip.sha512">SHA512</a>]
               </p>
               <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12349505" role="button" target="_blank">Release note &raquo;</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card flex-md-row mb-4 box-shadow h-md-250">
+            <div class="card-body d-flex flex-column align-items-start">
+              <strong class="d-inline-block mb-2 text-success"><i class="fas fa-circle"></i> Latest release</strong>
+              <h3 class="mb-0 text-dark">Karaf Cellar <span class="text-muted">4.2.1</span></h3>
+              <div class="mb-1 text-muted">August 21, 2020</div>
+              <p class="card-text mb-auto">
+                Installation Instructions:
+                  <a href="#cellar-installation">installation</a>
+              </p>
+              <p class="card-text mb-auto">
+                Source Distribution :
+                  <a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.tar.gz.sha512">SHA512</a>] -
+                                <a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.zip.sha512">SHA512</a>]
+              </p>
+              <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12344252" role="button" target="_blank">Release note &raquo;</a>
             </div>
           </div>
         </div>
@@ -134,9 +154,9 @@ permalink: /download
                       <td>6</td>
                       <td>8 / 9 / 10 / 11</td>
                       <td class="text-success">Stable</td>
-                      <td>4.2.10</td>
                       <td>4.2.11</td>
-                      <td>Feb 21</td>
+                      <td>4.2.12</td>
+                      <td>June 21</td>
                     </tr>
                     <tr>
                         <td>4.1.x</td>
