--- a/news.html
+++ b/news.html
@@ -52,7 +52,7 @@ permalink: /news
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
 
               <div class="pb-4 mb-3 border-bottom">
-                <h3 class="text-dark">Karaf Decanter 2.7.0 has been released! <span class="text-muted">February 15, 2021</span></h3>
+                <h3 class="text-dark">Karaf runtime 4.2.11 has been released! <span class="text-muted">March 15, 2021</span></h3>
                 <p>Apache Karaf runtime 4.2.11 is a release on the 4.2.x series. It provides updates, fixes, improvements, especially:
                 <ul>
                   <li>Karaf BillOfMaterial</li>
