Fix download zip sha512 links

--- a/download.html
+++ b/download.html
@@ -19,7 +19,7 @@ permalink: /download
                 <p class="card-text mb-auto">
                     Binary Distribution :
                     <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.0/apache-karaf-4.3.0.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0.tar.gz.sha512">SHA512</a>] -
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.0/apache-karaf-4.3.0.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/4.3.0/apache-karaf-4.3.0.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.0/apache-karaf-4.3.0.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0.zip.sha512">SHA512</a>]
                 </p>
                 <p class="card-text mb-auto">
                     Source Distribution :
@@ -39,7 +39,7 @@ permalink: /download
                 <p class="card-text mb-auto">
                     Binary Distribution :
                     <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.11/apache-karaf-4.2.11.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11.tar.gz.sha512">SHA512</a>] -
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.11/apache-karaf-4.2.11.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/4.3.0/apache-karaf-4.3.0.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.11/apache-karaf-4.2.11.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11.zip.sha512">SHA512</a>]
                 </p>
                 <p class="card-text mb-auto">
                     Source Distribution :
