--- a/download.html
+++ b/download.html
@@ -18,13 +18,23 @@ permalink: /download
               <div class="mb-1 text-muted">October 30, 2020</div>
                 <p class="card-text mb-auto">
                     Binary Distribution :
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.0/apache-karaf-4.3.0.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0.tar.gz.sha512">SHA512</a>] -
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.0/apache-karaf-4.3.0.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.0/apache-karaf-4.3.0.tar.gz">tar.gz</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0.tar.gz.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0.tar.gz.sha512">SHA512</a>]
+                    -
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.0/apache-karaf-4.3.0.zip">zip</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0.zip.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0.zip.sha512">SHA512</a>]
                 </p>
                 <p class="card-text mb-auto">
                     Source Distribution :
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.0/apache-karaf-4.3.0-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0-src.tar.gz.sha512">SHA512</a>] -
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.0/apache-karaf-4.3.0-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0-src.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.0/apache-karaf-4.3.0-src.tar.gz">tar.gz</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0-src.tar.gz.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0-src.tar.gz.sha512">SHA512</a>]
+                    -
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.3.0/apache-karaf-4.3.0-src.zip">zip</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0-src.zip.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.3.0/apache-karaf-4.3.0-src.zip.sha512">SHA512</a>]
                 </p>
                 <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12343304" role="button" target="_blank">Release note &raquo;</a>
             </div>
@@ -38,13 +48,23 @@ permalink: /download
               <div class="mb-1 text-muted">March 13, 2021</div>
                 <p class="card-text mb-auto">
                     Binary Distribution :
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.11/apache-karaf-4.2.11.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11.tar.gz.sha512">SHA512</a>] -
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.11/apache-karaf-4.2.11.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.11/apache-karaf-4.2.11.tar.gz">tar.gz</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11.tar.gz.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11.tar.gz.sha512">SHA512</a>]
+                    -
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.11/apache-karaf-4.2.11.zip">zip</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11.zip.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11.zip.sha512">SHA512</a>]
                 </p>
                 <p class="card-text mb-auto">
                     Source Distribution :
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.11/apache-karaf-4.2.11-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11-src.tar.gz.sha512">SHA512</a>] -
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.11/apache-karaf-4.2.11-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11-src.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.11/apache-karaf-4.2.11-src.tar.gz">tar.gz</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11-src.tar.gz.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11-src.tar.gz.sha512">SHA512</a>]
+                    -
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.11/apache-karaf-4.2.11-src.zip">zip</a>
+                            [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11-src.zip.asc">PGP</a>]
+                            [<a href="https://www.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11-src.zip.sha512">SHA512</a>]
                 </p>
                 <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12348692" role="button" target="_blank">Release note &raquo;</a>
             </div>
@@ -64,8 +84,13 @@ permalink: /download
               </p>
               <p class="card-text mb-auto">
                 Source Distribution :
-                  <a href="http://www.apache.org/dyn/closer.lua/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.tar.gz.sha512">SHA512</a>] -
-                                <a href="http://www.apache.org/dyn/closer.lua/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.zip.sha512">SHA512</a>]
+                  <a href="http://www.apache.org/dyn/closer.lua/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.tar.gz">tar.gz</a>
+                          [<a href="https://www.apache.org/dist/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.tar.gz.asc">PGP</a>]
+                          [<a href="https://www.apache.org/dist/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.tar.gz.sha512">SHA512</a>]
+                  -
+                  <a href="http://www.apache.org/dyn/closer.lua/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.zip">zip</a>
+                          [<a href="https://www.apache.org/dist/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.zip.asc">PGP</a>]
+                          [<a href="https://www.apache.org/dist/karaf/cave/4.2.1/apache-karaf-cave-4.2.1-src.zip.sha512">SHA512</a>]
               </p>
               <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12343975" role="button" target="_blank">Release note &raquo;</a>
             </div>
@@ -83,8 +108,13 @@ permalink: /download
               </p>
               <p class="card-text mb-auto">
                 Source Distribution :
-                  <a href="http://www.apache.org/dyn/closer.lua/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.tar.gz.sha512">SHA512</a>] -
-                                <a href="http://www.apache.org/dyn/closer.lua/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.zip.sha512">SHA512</a>]
+                  <a href="http://www.apache.org/dyn/closer.lua/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.tar.gz">tar.gz</a>
+                          [<a href="https://www.apache.org/dist/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.tar.gz.asc">PGP</a>]
+                          [<a href="https://www.apache.org/dist/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.tar.gz.sha512">SHA512</a>]
+                  -
+                  <a href="http://www.apache.org/dyn/closer.lua/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.zip">zip</a>
+                          [<a href="https://www.apache.org/dist/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.zip.asc">PGP</a>]
+                          [<a href="https://www.apache.org/dist/karaf/decanter/2.7.0/apache-karaf-decanter-2.7.0-src.zip.sha512">SHA512</a>]
               </p>
               <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12349505" role="button" target="_blank">Release note &raquo;</a>
             </div>
@@ -102,8 +132,13 @@ permalink: /download
               </p>
               <p class="card-text mb-auto">
                 Source Distribution :
-                  <a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.tar.gz.sha512">SHA512</a>] -
-                                <a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.zip.sha512">SHA512</a>]
+                  <a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.tar.gz">tar.gz</a>
+                          [<a href="https://www.apache.org/dist/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.tar.gz.asc">PGP</a>]
+                          [<a href="https://www.apache.org/dist/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.tar.gz.sha512">SHA512</a>]
+                  -
+                  <a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.zip">zip</a>
+                          [<a href="https://www.apache.org/dist/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.zip.asc">PGP</a>]
+                          [<a href="https://www.apache.org/dist/karaf/cellar/4.2.1/apache-karaf-cellar-4.2.1-src.zip.sha512">SHA512</a>]
               </p>
               <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12344252" role="button" target="_blank">Release note &raquo;</a>
             </div>
