--- a/archives.html
+++ b/archives.html
@@ -41,6 +41,16 @@ permalink: /archives
                         <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12343304')">Release Notes</a></td>
                     </tr>
                     <tr>
+                        <td>4.2.11</td>
+                        <td><a href="http://archive.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="http://archive.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11-src.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11-src.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11-src.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11-src.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11-src.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.11/apache-karaf-4.2.11-src.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12348692')">Release Notes</a></td>
+                    </tr>
+                    <tr>
                         <td>4.2.10</td>
                         <td><a href="http://archive.apache.org/dist/karaf/4.2.10/apache-karaf-4.2.10.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.2.10/apache-karaf-4.2.10.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.10/apache-karaf-4.2.10.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.10/apache-karaf-4.2.10.tar.gz.sha512">SHA512</a>]<br>
                             <a href="http://archive.apache.org/dist/karaf/4.2.10/apache-karaf-4.2.10.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.2.10/apache-karaf-4.2.10.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.10/apache-karaf-4.2.10.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.10/apache-karaf-4.2.10.zip.sha512">SHA512</a>]
