--- a/community.html
+++ b/community.html
@@ -107,14 +107,14 @@ permalink: /community
                     <li>Do the change in a branch that is named like the jira issue id e.g KARAF-1234.<br/>To create this branch you can use:<br/>
                         <code>git clone http://github.com/apache/karaf</code><br/>
                         <code>git fetch --all</code><br/>
-                        <code>git checkout -b my-branch origin/master</code><br/>
+                        <code>git checkout -b my-branch origin/main</code><br/>
                         Don't forget to periodically rebase your branch:<br/>
                         <code>git pull --rebase</code><br/>
                         <code>git push GitHubUser my-branch --force</code>
                     </li>
-                    <li>PRs should be based on master. We are taking care of cherry picking the PR commits on target branches if needed.</li>
+                    <li>PRs should be based on main. We are taking care of cherry picking the PR commits on target branches if needed.</li>
                     <li>Every commit in the branch should start with the jira issue id like this "[KARAF-123] More details"</li>
-                    <li>If you have a group of commits related to the same change, please squash your commits into one and force push your branch using <code>git rebase -i apache/master</code></li>
+                    <li>If you have a group of commits related to the same change, please squash your commits into one and force push your branch using <code>git rebase -i apache/main</code></li>
                     <li>Test that your change works by adapting or adding tests.</li>
                     <li><a href="http://programmer.97things.oreilly.com/wiki/index.php/The_Boy_Scout_Rule">Follow the boy scout rule to "Always leave the campground cleaner than you found it."</a></li>
                     <li>Make sure you do a build before doing a PR. The build has to be successfull :<br/>
@@ -122,7 +122,7 @@ permalink: /community
                             mvn clean verify -Prat
                         </code>
                     </li>
-                    <li>If your PR has conflicts with the master then rebase the branch. PRs with conflicts are unlikely to be applied</li>
+                    <li>If your PR has conflicts with the main then rebase the branch. PRs with conflicts are unlikely to be applied</li>
                     <li>Do not change too much in a PR. The smaller the PR the easier it is to apply and the faster it will be done</li>
                     <li>Even if we are monitoring closely the PR, if you think your PR doesn't move forward fast enough, do not hesitate to ping in a PR comment to get some update.</li>
               </ul>
@@ -168,7 +168,7 @@ permalink: /community
                         <code>> git checkout -b pr-xxx github/pr/xxx</code>
                     </li>
                     <li>Review the PR, amend, squash the commits, requesting changes, ... When done, add <code>LGTM</code> comment to approve the PR (or click on the "Approve" button on GitHub) :<br/>
-                        <code>> git rebase -i apache/master</code>
+                        <code>> git rebase -i apache/main</code>
                     </li>
                     <li>Merge the PR (it automatically closes the PR) :<br/>
                         Use the merge button on github (for committer).
