Update documentation examples list

--- a/documentation.html
+++ b/documentation.html
@@ -139,6 +139,13 @@ permalink: /documentation
                         </a></td>
                     </tr>
                     <tr>
+                        <td><strong>CDI</strong></td>
+                        <td>this example shows how to use CDI in Karaf, with annotations (Inject, etc).</td>
+                        <td><a href="https://github.com/apache/karaf/tree/main/examples/karaf-cdi-example" target="_blank">
+                            <img src="/images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
                         <td><strong>Shell Command</strong></td>
                         <td>creating a shell command.</td>
                         <td><a href="https://github.com/apache/karaf/tree/main/examples/karaf-command-example" target="_blank">
@@ -156,6 +163,13 @@ permalink: /documentation
                         <td><strong>Deployer</strong></td>
                         <td>creating a Karaf deployer service on the deploy folder.</td>
                         <td><a href="https://github.com/apache/karaf/tree/main/examples/karaf-deployer-example" target="_blank">
+                            <img src="/images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
+                        <td><strong>Docker</strong></td>
+                        <td>this example shows how to easily create Docker image with Karaf and your applications. It shows two kinds of packages: static or dynamic.</td>
+                        <td><a href="https://github.com/apache/karaf/tree/main/examples/karaf-docker-example" target="_blank">
                             <img src="/images/github.png" width="24px">
                         </a></td>
                     </tr>
@@ -233,6 +247,13 @@ permalink: /documentation
                         <td><strong>Profile</strong></td>
                         <td>creating several profiles (in a registry) and use these profiles to create custom distributions.</td>
                         <td><a href="https://github.com/apache/karaf/tree/main/examples/karaf-profile-example" target="_blank">
+                            <img src="/images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
+                        <td><strong>Redis</strong></td>
+                        <td>using a Redis server (pub/sub, or key/value store) within Karaf.</td>
+                        <td><a href="https://github.com/apache/karaf/tree/main/examples/karaf-redis-example" target="_blank">
                             <img src="/images/github.png" width="24px">
                         </a></td>
                     </tr>
